--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,11 +25,12 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/ic_group_305"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="ExtraText,GoogleAppIndexingWarning">
-        <activity android:name=".LockActivity"></activity>
+        <activity android:name=".ChildHidden"></activity>
+        <activity android:name=".LockActivity" />
         <activity android:name=".AppUsageStatistics" />
         <activity android:name=".Suggestion" />
         <activity android:name=".Home" />
